--- a/code/Python-django/blog/home/templates/index.html
+++ b/code/Python-django/blog/home/templates/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
 </head>
 
 <body style="background-color: #f3f3f3">
     <div class="panel panel-default" style="margin-top:15%;background-color: 
     #f3f3f3;border: none">
         <div class="panel-body" style="display:flex;align-items: center;
-        display: flex;
+        display: flex;flex-direction: column;
         justify-content: center;">
             <div style="border: solid 10px rgba(0,0,0,-0.8);
             width: 200px;
@@ -28,9 +29,25 @@
             box-shadow: 0 0 60px rgba(0,0,0,.3);">
                 <img src="/static/images/psb.jpg" style="width:100%;" alt="">
             </div>
-            <div class="title" style="font-size: 84px;
-            font-weight: 100;">
-                AO！向军
+            <div class="title" style="font-size: 84px;font-weight: 100;">
+                PFinal 南丞
+            </div>
+
+            <div class="navbar navbar-inverse">
+                <ul class="nav navbar-nav">
+                    <li style="margin-left:10px;">
+                        <a href=""> <i class="fa fa-home fa-fw" aria-hidden="true"></i> 首页</a>
+                    </li>
+                    <li>
+                        <a href="/article">文章</a>
+                    </li>
+                    <li>
+                        <a href="#">知乎</a>
+                    </li>
+                    <li>
+                        <a href="#">github</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
